# simple-claude-code-github-agent

./: .dockerignore  .env.example  .flake8  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  LANGFUSE_SETUP.md  README.md  START.md  check-code.ps1  docker-compose.minimal.yml  docker-compose.yml  langfuse_hook.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  workflows.yaml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEBUGGING_SUBAGENTS.md  DEVELOPMENT.md  GETTING_STARTED.md  HEALTH_MONITORING.md  INSTALLATION.md  LANGFUSE_SETUP.md  PLUGINS.md  PR_REVIEW_FLOW.md  RATE_LIMITING.md  SUBAGENTS.md  TESTING.md  WORKFLOWS.md
hooks/: langfuse_hook.py
plugins/ci-failure-toolkit/: README.md
plugins/ci-failure-toolkit/.claude-plugin/: plugin.json
plugins/ci-failure-toolkit/agents/: build-failure-analyzer.md  deploy-failure-analyzer.md  lint-failure-analyzer.md  test-failure-analyzer.md
plugins/ci-failure-toolkit/commands/: fix-ci.md
plugins/pr-review-toolkit/commands/: review-pr.md
prompts/: fix-ci.md  generic.md  review.md  triage.md
services/agent-worker/: Dockerfile  requirements.txt  worker.py
services/agent_worker/: Dockerfile  __init__.py  requirements.txt  worker.py
services/agent_worker/auth/: __init__.py  github_token_manager.py
services/repo_sync/: Dockerfile  requirements.txt  sync_worker.py
services/sandbox_executor/: Dockerfile  executor.py  main.py  requirements.txt  sandbox_worker.py
services/webhook/: Dockerfile  main.py  requirements.txt
shared/: __init__.py  config.py  exceptions.py  git_utils.py  github_auth.py  health.py  http_client.py  job_queue.py  logging_utils.py  models.py  queue.py  rate_limiter.py  retry.py  signals.py
subagents/: README.md  __init__.py  architecture-reviewer.json  architecture-reviewer.md  architecture_reviewer.py  bug-hunter.json  bug-hunter.md  bug-investigator.json  code-quality-reviewer.json  code-quality-reviewer.md  context-gatherer.json  security-reviewer.json  security-reviewer.md  test-writer.json
tests/: README.md  conftest.py
tests/agent_worker/: test_builtin_commands.py  test_claude_sdk_executor.py  test_claude_settings.py  test_command_base.py  test_command_registry.py  test_github_token_manager.py  test_mcp_config.py  test_mcp_configuration_builder.py  test_observability_manager.py  test_repository_context_loader.py  test_request_processor.py  test_worker.py
tests/fixtures/: github_payloads.py
tests/integration/: test_queue_integration.py  test_webhook_handlers.py
tests/repo_sync/: __init__.py  test_sync_worker.py
tests/sandbox_executor/: __init__.py  test_executor.py  test_main.py  test_sandbox_worker.py
tests/shared/: test_config.py  test_exceptions.py  test_github_auth.py  test_health.py  test_http_client.py  test_job_queue.py  test_models.py  test_queue.py  test_rate_limiter.py  test_retry.py
tests/unit/: test_git_utils.py  test_logging_utils.py  test_signals.py
tests/webhook/: test_command_parser.py  test_handlers.py
tests/workflows/: test_engine.py  test_fix_ci_workflow.py
workflows/: __init__.py  engine.py
(+29 files in other folders)
